[workspace]
resolver = "2"
members = [
    'node',
    'pallets/account-fix',
    'pallets/bitacross',
    'pallets/bridge/assets-handler',
    'pallets/bridge/chain-bridge',
    'pallets/bridge/bridge-transfer',
    'pallets/bridge/common',
    'pallets/collab-ai/aiusd-convertor',
    'pallets/collab-ai/common',
    'pallets/collab-ai/curator',
    'pallets/collab-ai/guardian',
    'pallets/collab-ai/halving-mint',
    'pallets/collab-ai/pool-proposal',
    'pallets/collab-ai/investing-pool',
    'pallets/extrinsic-filter',
    'pallets/evm-address',
    'pallets/evm-assertions',
    'pallets/group',
    'pallets/identity-management',
    'pallets/parachain-staking',
    'pallets/score-staking',
    'pallets/teebag',
    'pallets/vc-management',
    'pallets/xcm-asset-manager',
    'pallets/omni-account',
    'pallets/omni-account/runtime-api',
    'pallets/omni-bridge',
    'precompiles/assets-erc20',
    'precompiles/bridge-transfer',
    'precompiles/collab-ai/aiusd-convertor',
    'precompiles/collab-ai/curator',
    'precompiles/collab-ai/guardian',
    'precompiles/collab-ai/pool-proposal',
    'precompiles/collab-ai/investing-pool',
    'precompiles/parachain-staking',
    'precompiles/score-staking',
    'runtime/litentry',
    'runtime/paseo',
    'runtime/common',
]
exclude = []

[workspace.lints.clippy]
doc_lazy_continuation = "allow"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.dev]
# https://internals.rust-lang.org/t/help-test-faster-incremental-debug-macos-builds-on-nightly/14016
split-debuginfo = 'unpacked'

[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = "thin"
strip = "symbols"
incremental = false

[workspace.dependencies]
async-trait = { version = "0.1.81" }
assert_matches = { version = "1.3.0" }
blake2-rfc = { version = "0.2.18", default-features = false }
base58 = { version = "0.2", default-features = false }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
bitflags = { version = "1.3.2" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
der = { version = "0.6.0", default-features = false }
derive_more = { version = "0.99" }
env_logger = { version = "0.10.2" }
environmental = { version = "1.1.2", default-features = false }
evm = { version = "0.41.1", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
log = { version = "0.4", default-features = false }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive", "max-encoded-len"] }
paste = { version = "1.0" }
serde = { version = "=1.0.214", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.133", default-features = false }
slices = { version = "0.2.0" }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
similar-asserts = { version = "1.6.0" }
sha3 = { version = "0.10", default-features = false }
futures = { version = "0.3.30", features = ["compat"] }
jsonrpsee = { version = "0.23.2", features = ["server"] }
tokio = { version = "1.40.0", features = ["macros", "sync"] }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
num-integer = { version = "0.1", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
x509-cert = { version = "0.1.0", default-features = false, features = ["alloc"] }
# ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
webpki = { version = "=0.102.0-alpha.3", git = "https://github.com/rustls/webpki", rev = "da923ed", package = "rustls-webpki", default-features = false, features = ["alloc", "ring"] }

# cumulus client
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

# evm-tracing, use the astar version to use "standard" substrate frame to avoid any conflicts
moonbeam-primitives-ext = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }
moonbeam-rpc-debug = { git = "https://github.com/litentry/moonbeam-vendor-rpc" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }
moonbeam-rpc-primitives-txpool = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }
moonbeam-rpc-trace = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }
moonbeam-rpc-txpool = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }
moonbeam-evm-tracer = { git = "https://github.com/litentry/moonbeam-vendor-rpc", default-features = false }

# polkadot client
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

# frontier
fc-api = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false, features = ["rpc-binary-search-estimate", "txpool"] }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false, features = ["serde"] }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "stable2407", default-features = false }

# substrate client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

# wasm
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false, features = ["improved_panic_error_reporting"] }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-conviction-voting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-referenda = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-whitelist = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-state-trie-migration = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "stable2407", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
assets-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }

substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }

# benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "stable2407", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2407" }

# local
core-primitives = { path = "../common/primitives/core", default-features = false }
litentry-macros = { path = "../common/primitives/core/macros" }
litentry-proc-macros = { path = "../common/primitives/core/proc-macros" }
litentry-hex-utils = { path = "../common/utils/hex", default-features = false }
runtime-common = { path = "runtime/common", default-features = false }
litentry-parachain-runtime = { path = "runtime/litentry", default-features = false }
paseo-parachain-runtime = { path = "runtime/paseo", default-features = false }
pallet-account-fix = { path = "pallets/account-fix", default-features = false }
pallet-asset-manager = { path = "pallets/xcm-asset-manager", default-features = false }
pallet-assets-handler = { path = "pallets/bridge/assets-handler", default-features = false }
pallet-bitacross = { path = "pallets/bitacross", default-features = false }
pallet-chain-bridge = { path = "pallets/bridge/chain-bridge", default-features = false }
pallet-bridge-common = { path = "pallets/bridge/common", default-features = false }
pallet-bridge-transfer = { path = "pallets/bridge/bridge-transfer", default-features = false }
pallet-extrinsic-filter = { path = "pallets/extrinsic-filter", default-features = false }
pallet-group = { path = "pallets/group", default-features = false }
pallet-identity-management = { path = "pallets/identity-management", default-features = false }
pallet-omni-account = { path = "pallets/omni-account", default-features = false }
pallet-omni-account-runtime-api = { path = "pallets/omni-account/runtime-api", default-features = false }
pallet-omni-bridge = { path = "pallets/omni-bridge", default-features = false }
pallet-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
pallet-score-staking = { path = "pallets/score-staking", default-features = false }
pallet-teebag = { path = "pallets/teebag", default-features = false }
pallet-vc-management = { path = "pallets/vc-management", default-features = false }
pallet-evm-precompile-assets-erc20 = { path = "precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-bridge-transfer = { path = "precompiles/bridge-transfer", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "precompiles/parachain-staking", default-features = false }
pallet-evm-precompile-score-staking = { path = "precompiles/score-staking", default-features = false }

pallet-evm-precompile-aiusd-convertor = { path = "precompiles/collab-ai/aiusd-convertor", default-features = false }
pallet-evm-precompile-curator = { path = "precompiles/collab-ai/curator", default-features = false }
pallet-evm-precompile-guardian = { path = "precompiles/collab-ai/guardian", default-features = false }
pallet-evm-precompile-pool-proposal = { path = "precompiles/collab-ai/pool-proposal", default-features = false }
pallet-evm-precompile-investing-pool = { path = "precompiles/collab-ai/investing-pool", default-features = false }

pallet-evm-assertions = { path = "pallets/evm-assertions", default-features = false }
pallet-halving-mint = { path = "pallets/halving-mint", default-features = false }

# CollabAI local
pallet-aiusd-convertor = { path = "pallets/collab-ai/aiusd-convertor", default-features = false }
pallet-collab-ai-common = { path = "pallets/collab-ai/common", default-features = false }
pallet-curator = { path = "pallets/collab-ai/curator", default-features = false }
pallet-guardian = { path = "pallets/collab-ai/guardian", default-features = false }
pallet-pool-proposal = { path = "pallets/collab-ai/pool-proposal", default-features = false }
pallet-investing-pool = { path = "pallets/collab-ai/investing-pool", default-features = false }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }
