[workspace]
members = [
    "executor-core",
    "executor-worker",
    "parentchain/listener",
    "parentchain/api-interface",
    "parentchain/rpc-client",
    "parentchain/storage",
    "parentchain/primitives",
    "ethereum/intent-executor",
    "solana/intent-executor",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
alloy = "0.3.6"
async-trait = "0.1.82"
clap = "4.5.17"
env_logger = "0.11.5"
frame-support = { version = "39.0.0", features = ["std"] }
hex = "0.4.3"
log = "0.4.22"
parity-scale-codec = "3.6.12"
regex = "1.7"
scale-encode = "0.10.0"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
sp-core = "35.0.0"
sp-state-machine = { version = "0.44.0", features = ["std"] }
subxt = "0.38.0"
subxt-core = "0.38.0"
subxt-signer = { version = "0.38.0", features = ["subxt"] }
tokio = "1.40.0"

ethereum-intent-executor = { path = "ethereum/intent-executor" }
executor-core = { path = "executor-core" }
parentchain-api-interface = { path = "parentchain/api-interface" }
parentchain-listener = { path = "parentchain/listener" }
parentchain-primitives = { path = "parentchain/primitives" }
parentchain-rpc-client = { path = "parentchain/rpc-client" }
parentchain-storage = { path = "parentchain/storage" }
solana-intent-executor = { path = "solana/intent-executor" }

[workspace.lints.clippy]
result_unit_err = "allow"
