[workspace]
members = [
    "crypto",
    "executor-core",
    "executor-worker",
    "ethereum/intent-executor",
    "ethereum/intent-executor",
    "heima/identity-verification",
    "native-task-handler",
    "parentchain/listener",
    "parentchain/api-interface",
    "parentchain/rpc-client",
    "primitives",
    "rpc-server",
    "services/mailer",
    "storage",
    "solana/intent-executor",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
alloy = "0.3.6"
async-trait = "0.1.82"
base64 = "0.22.1"
bitcoin = "0.32.5"
clap = "4.5.17"
env_logger = "0.11.5"
frame-support = { version = "39.0.0", features = ["std"] }
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["server"] }
log = "0.4.22"
parity-scale-codec = "3.6.12"
rand = "0.8.5"
ring = "0.16.20"
rsa = "0.9.7"
scale-encode = "0.10.0"
scale-info = "2.11.6"
secp256k1 = "=0.29.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.1.5"
solana-sdk = "2.1.5"
sp-core = "35.0.0"
sp-state-machine = { version = "0.44.0", features = ["std"] }
subxt = "0.38.0"
subxt-core = "0.38.0"
subxt-signer = { version = "0.38.0", features = ["subxt"] }
tokio = "1.43.0"

# Local dependencies
crypto = { path = "crypto" }
ethereum-intent-executor = { path = "ethereum/intent-executor" }
executor-core = { path = "executor-core" }
heima-identity-verification = { path = "heima/identity-verification" }
mailer = { path = "services/mailer" }
native-task-handler = { path = "native-task-handler" }
parentchain-api-interface = { path = "parentchain/api-interface" }
parentchain-listener = { path = "parentchain/listener" }
parentchain-rpc-client = { path = "parentchain/rpc-client" }
primitives = { path = "primitives" }
rpc-server = { path = "rpc-server" }
solana-intent-executor = { path = "solana/intent-executor" }
storage = { path = "storage" }

[workspace.lints.clippy]
result_unit_err = "allow"
