[package]
authors = ["Trust Computing GmbH <info@litentry.com>"]
edition = '2021'
name = 'core-primitives'
version = '0.1.0'

[dependencies]
base58 = { version = "0.2", default-features = false }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
der = { version = "0.6.0", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
parity-scale-codec = { version = "=3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
parity-scale-codec-derive = { version = "=3.6.12", default-features = false, features = ["max-encoded-len"] }
ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.128", default-features = false }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
webpki = { version = "=0.102.2", git = "https://github.com/rustls/webpki", rev = "049e9d5", package = "rustls-webpki", default-features = false, features = ["alloc", "ring"] }
x509-cert = { version = "0.1.0", default-features = false, features = ["alloc"] }

frame-support = { version = "33.0.0", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
sp-core = { version = "32.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false, features = ["improved_panic_error_reporting", "disable_panic_handler"] }
sp-runtime = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

litentry-hex-utils = { path = "../../utils/hex", default-features = false }
litentry-macros = { path = "macros" }
litentry-proc-macros = { path = "proc-macros" }

[features]
default = ["std"]
std = [
    "chrono/std",
    "der/std",
    "hex/std",
    "ring/std",
    "webpki/std",
    "x509-cert/std",
    "serde/std",
    "serde_json/std",
    "strum/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-evm/std",
    "litentry-hex-utils/std",
]
development = [
    "litentry-macros/development",
]
