[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
description = 'Pallet for temporary fix of onchain accountInfo'
edition = '2021'
homepage = 'https://www.heima.network/'
license = 'GPL-3.0'
name = 'pallet-account-fix'
repository = 'https://github.com/litentry/litentry-parachain'
version = '0.1.0'

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
