[package]
authors = ['Trust Computing GmbH <info@litentry.com>']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-identity-management'
repository = 'https://github.com/litentry/heima'
version = '0.1.0'

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

core-primitives = { workspace = true }
pallet-teebag = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-teebag = { workspace = true, features = ["std", "test-util"] }
pallet-group = { workspace = true, features = ["std"] }
pallet-utility = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-teebag/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
]
std = [
    "core-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-group/std",
    "pallet-teebag/std",
    "pallet-timestamp/std",
    "pallet-utility/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
