[package]
authors = ["Litentry"]
description = "parachain staking pallet for collator selection and reward distribution"
edition = '2021'
homepage = 'https://www.heima.network/'
license = 'GPL-3.0'
name = "pallet-parachain-staking"
repository = 'https://github.com/litentry/litentry-parachain'
version = "0.1.0"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

core-primitives = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
substrate-fixed = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "core-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-session/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-std/std",
    "substrate-fixed/std",
]
try-runtime = ["frame-support/try-runtime"]
