[package]
name = "pallet-score-staking"
description = 'pallet to stake based on the oracle score'
version = "0.1.0"
edition = "2021"

[dependencies]
num-integer = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

core-primitives = { workspace = true }
pallet-parachain-staking = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
    "core-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "num-integer/std",
    "pallet-balances/std",
    "pallet-parachain-staking/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keyring/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
