[package]
authors = ['Trust Computing GmbH <info@litentry.com>', 'Integritee AG <hello@integritee.network>']
edition = '2021'
homepage = 'https://litentry.com'
name = 'pallet-teebag'
description = 'Pallet for tee-worker registration and management'
repository = 'https://github.com/litentry/litentry-parachain'
license = 'GPL-3.0'
version = '0.1.0'

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
der = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
webpki = { workspace = true }
x509-cert = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true, optional = true }
pallet-timestamp = { workspace = true }
pallet-utility = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

core-primitives = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
frame-benchmarking = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
    "base64/std",
    "chrono/std",
    "core-primitives/std",
    "der/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "hex/std",
    "log/std",
    "pallet-balances?/std",
    "pallet-timestamp/std",
    "pallet-utility/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "serde_json/std",
    "sp-core/std",
    "sp-io/std",
    "sp-keyring/std",
    "sp-runtime/std",
    "sp-std/std",
    "webpki/std",
    "x509-cert/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-balances?/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
# workaround to cross crate boundary, see https://github.com/rust-lang/cargo/issues/8379
test-util = []
